Fixed integration tests on Java 17